--- a/project/yazhou-pc/src/pages/bet-record/record-table/index.scss
+++ b/project/yazhou-pc/src/pages/bet-record/record-table/index.scss
@@ -271,7 +271,7 @@
   }
   .bet-compute-money {
     margin-bottom: 25px;
-    ::v-deep .vue-slider {
+    :deep(.vue-slider) {
       cursor: pointer;
       .vue-slider-rail {
         .vue-slider-marks {
