--- a/project/yazhou-h5/src/pages/match-filter/index_old.scss
+++ b/project/yazhou-h5/src/pages/match-filter/index_old.scss
@@ -224,7 +224,7 @@
     overflow-x: hidden;
     overflow-y: auto;
   
-    ::v-deep.q-scrollarea__thumb--v {
+    :deep(.q-scrollarea__thumb--v) {
       display: none;
       width: 5px;
     }
