--- a/src/components/menu/h5-menu-template-1/menu.scss
+++ b/src/components/menu/h5-menu-template-1/menu.scss
@@ -288,14 +288,14 @@
                 color: var(--q-color-fs-color-7);
 
                 &.focus {
-                    color: var(--q-color-fs-color-51);
+                    color: var(--q-gb-t-c-1);
 
                     &.is-favorite {
                         color: var(--q-color-fs-color-6);
                     }
 
                     &:after {
-                        background-color: var(--q-color-fs-color-51);
+                        background-color: var(--q-gb-t-c-1);
                     }
 
                     span {
