--- a/src/components/menu/h5-menu-template-1/menu.scss
+++ b/src/components/menu/h5-menu-template-1/menu.scss
@@ -134,7 +134,7 @@
         }
 
         .sport-m-container {
-            background: var(--q-color-page-bg-color-95);
+            background: var(--q-gb-bg-c-15);
 
             .virtual-sports-results {
                 background-color: var(--q-color-page-bg-color-2);
@@ -219,7 +219,7 @@
             backdrop-filter: var(--q-color-backdrop-filter-bg-1);
 
             .selector-w-inner {
-                background: var(--q-color-page-bg-color-95);
+                background: var(--q-gb-bg-c-15);
                 backdrop-filter: blur(5px);
 
                 &.hairline-border {
