--- a/project/yazhou-h5/src/css/bet/bet_single_detail.scss
+++ b/project/yazhou-h5/src/css/bet/bet_single_detail.scss
@@ -14,7 +14,7 @@
       border-color: var(--q-color-com-border-color-14) !important;
     }
     .content-b {
-      border: 1px solid var(--q-color-border-color-3);
+      border: 1px solid var(--q-gb-t-c-1);
       color: var(--q-gb-t-c-4);
       background:var(--q-gb-bd-c-15);
     }
