菜单逻辑优化修复

--- a/src/components/footer/h5-footer-template-1/footer_menu.scss
+++ b/src/components/footer/h5-footer-template-1/footer_menu.scss
@@ -1,8 +1,8 @@
 [class*=theme0] {
   .sub-background {
-    background-color: var(--q-color-page-bg-color-38);
+    background-color: var(--q-gb-bg-c-1);
     .sub-m-menu {
-      background:var(--q-color-page-bg-color-2);
+      background:var(--q-gb-bg-c-15);
       .wrapper {
         &.current_sub_menu {
           &:after {
