字体文件路径

--- a/project/yazhou-pc/src/css/app.scss
+++ b/project/yazhou-pc/src/css/app.scss
@@ -7,12 +7,12 @@
 
 @font-face {
   font-family: "Number-regular";
-  src: url("/yazhou-pc/image/common/DINPro-Regular.otf");
+  src: url("/font/DINPro-Regular.otf");
 }
 
 @font-face {
   font-family: "Number-medium";
-  src: url("/yazhou-pc/image/common/DINPro-Medium.otf");
+  src: url("/font/DINPro-Medium.otf");
 }
 .din-regular {
   font-family: "Number-regular";
