增加滚动条背景色

--- a/project/yazhou-pc/src/css/app.scss
+++ b/project/yazhou-pc/src/css/app.scss
@@ -335,6 +335,7 @@ input::-ms-reveal {
   opacity: 1;
   border-radius: 4px;
   cursor: pointer;
+  background: rgba(60, 63, 76, 0.3);
 }
 
 /* 所有图片背景大小默认100% */
