--- a/project/yazhou-pc/src/layouts/match-list.scss
+++ b/project/yazhou-pc/src/layouts/match-list.scss
@@ -11,16 +11,16 @@ body {
 
   /* 列表 */
   .yb-match-list {
-    &::before {
-      content: '';
-      position: absolute;
-      right: 11px;
-      z-index: 499;
-      top: 0;
-      left: 0;
-      height: 6px;
-      background-color: var(--q-gb-bg-c-11);
-    }
+    // &::before {
+    //   content: '';
+    //   position: absolute;
+    //   right: 11px;
+    //   z-index: 499;
+    //   top: 0;
+    //   left: 0;
+    //   height: 6px;
+    //   background-color: var(--q-gb-bg-c-11);
+    // }
 
     /*顶部下横线*/
     .scroll-fixed-header {
