--- a/src/components/bet/bet-box-pc-1/css/bet_single.scss
+++ b/src/components/bet/bet-box-pc-1/css/bet_single.scss
@@ -141,9 +141,9 @@
           position: relative;
           padding: 3px 8px;
           font-size: 12px;
-          color: var(--q--gb-t-c-16);
+          color: var(--q-gb-t-c-16);
           text-align: center;
-          background: var(--q-gb-bg-c-18);
+          background: var(--q-gb-bg-c-19);
           border: 0.5px solid var(--q-gb-bd-c-11);
           border-radius: 10px;
         }
@@ -209,6 +209,7 @@
           color: var(--q-gb-t-c-6);
           font-weight: 600;
           line-height: 1.3;
+          padding-right: 10px;
         }
 
         /* *限额及最大可赢区域的公共样式* */
