--- a/src/components/bet/bet-box-pc-1/css/bet_single.scss
+++ b/src/components/bet/bet-box-pc-1/css/bet_single.scss
@@ -505,13 +505,13 @@ body {
   .bet-view {
     .bet-single {
       .bet-single-record {
-        background: var(--qq--y0-bg-color11);
+        background: var(--q-gb-bg-c-22);
         .row {
           margin: 0;
           padding-left: 10px;
           padding-right: 10px;
           &.first-row {
-            padding-top: 15px;
+            // padding-top: 15px;
           }
           .col {
             padding: 0;
