详情监听获取最新仓库数据

--- a/project/yazhou-pc/src/css/app.scss
+++ b/project/yazhou-pc/src/css/app.scss
@@ -329,7 +329,7 @@ input::-ms-reveal {
 }
 
 /* 体育规则滚动条 */
-.rule-scroll-area .q-scrollarea__thumb {
+.q-scrollarea__thumb {
   width: 8px;
   right: 2px;
   opacity: 1;
